--- a/index.html
+++ b/index.html
@@ -46,7 +46,38 @@
                 <div class="pick-graphs">Graphs</div>
             </div>
 
-            <div id="container" class="col-11"></div>
+            <div class="col-6 charts">
+                <div id="container1"></div>
+                <p class="transfered">Total data transfered: 17,3GB</p>
+            </div>
+            <div class="col-6 charts">
+                <div id="container2"></div>
+                <p class="transfered">Total data transfered: 17,3GB</p>
+            </div>
+            <div class="col-6 charts">
+                <div id="container3"></div>
+                <p class="transfered">Total data transfered: 17,3GB</p>
+            </div>
+            <div class="col-6 charts">
+                <div id="container4"></div>
+                <p class="transfered">Total data transfered: 17,3GB</p>
+            </div>
+            <div class="col-6 charts">
+                <div id="container5"></div>
+                <p class="transfered">Total data transfered: 17,3GB</p>
+            </div>
+            <div class="col-6 charts">
+                <div id="container6"></div>
+                <p class="transfered">Total data transfered: 17,3GB</p>
+            </div>
+            <div class="col-6 charts">
+                <div id="container7"></div>
+                <p class="transfered">Total data transfered: 17,3GB</p>
+            </div>
+            <div class="col-6 charts">
+                <div id="container8"></div>
+                <p class="transfered">Total data transfered: 17,3GB</p>
+            </div>
 
         </div>
 
@@ -54,6 +85,7 @@
     </div>
 
     <script src="./main.js"></script>
+    <script src="./charts.js"></script>
 </body>
 
 </html>
