--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
         crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU"
         crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="./main.css">
@@ -27,14 +28,13 @@
             </div>
 
             <div class="col-12 header">
+
                 <div class="search">
                     <input type="text" name="mac" placeholder="Mac: address">
                     <input type="text" name="contract" placeholder="Contract ID">
                     <div class="mac-wrapper">
-
                     </div>
                     <div class="contract-wrapper">
-
                     </div>
                 </div>
 
@@ -44,38 +44,192 @@
                 </div>
                 <div class="pick-tables">Tables</div>
                 <div class="pick-graphs">Graphs</div>
+
+                <div class="viewing-data">
+                    <p class="typed currently">Currently viewing data:</p>
+                    <p class="info">
+                        <span class="grey">Mac adress: </span>
+                        <span class="typed"></span>
+                    </p>
+                    <p class="info">
+                        <span class="grey">Contract ID: </span>
+                        <span class="typed"></span>
+                    </p>
+                    <p class="info">
+                        <span class="grey">City:</span>
+                        <span class="typed">Budapest</span>
+                    </p>
+                </div>
+                <div class="days-wrapper">
+                    <div class="days">
+                        <div class="day1">1 Day</div>
+                        <div class="day7">7 Days</div>
+                    </div>
+                    <div class="date">
+                        <17.06.2018 - 22.06.2018>
+                    </div>
+                </div>
+                <div class="reset">Reset filters</div>
+
             </div>
 
-            <div class="col-6 charts">
-                <div id="container1"></div>
+            <div class="col-12 col-md-6 charts">
+                <div class="chart-wrapper" style="z-index: -9999;">
+                    <div id="container1" style="z-index: -999"></div>
+                </div>
+                <div class="export-wrapper">
+                    <div class="export-div">Export
+                        <div class="drop-menu">
+                            <div class="drop-first">CVS</div>
+                            <div>Ecel</div>
+                            <div>PDF</div>
+                            <div>Print</div>
+                            <div class="drop-last">Copy</div>
+                        </div>
+                        <i class="fa">&#xf107;</i>
+                    </div>
+                    <i class="fa">&#xf0b2;</i>
+                </div>
                 <p class="transfered">Total data transfered: 17,3GB</p>
             </div>
-            <div class="col-6 charts">
-                <div id="container2"></div>
+
+            <div class="col-12 col-md-6 charts">
+                <div class="chart-wrapper" style="z-index: -9999;">
+                    <div id="container2" style="z-index: -999"></div>
+                </div>
+                <div class="export-wrapper">
+                    <div class="export-div">Export
+                        <div class="drop-menu">
+                            <div class="drop-first">CVS</div>
+                            <div>Ecel</div>
+                            <div>PDF</div>
+                            <div>Print</div>
+                            <div class="drop-last">Copy</div>
+                        </div>
+                        <i class="fa">&#xf107;</i>
+                    </div>
+                    <i class="fa">&#xf0b2;</i>
+                </div>
                 <p class="transfered">Total data transfered: 17,3GB</p>
             </div>
-            <div class="col-6 charts">
-                <div id="container3"></div>
+
+            <div class="col-12 col-md-6 charts">
+                <div class="chart-wrapper" style="z-index: -9999;">
+                    <div id="container3" style="z-index: -999"></div>
+                </div>
+                <div class="export-wrapper">
+                    <div class="export-div">Export
+                        <div class="drop-menu">
+                            <div class="drop-first">CVS</div>
+                            <div>Ecel</div>
+                            <div>PDF</div>
+                            <div>Print</div>
+                            <div class="drop-last">Copy</div>
+                        </div>
+                        <i class="fa">&#xf107;</i>
+                    </div>
+                    <i class="fa">&#xf0b2;</i>
+                </div>
                 <p class="transfered">Total data transfered: 17,3GB</p>
             </div>
-            <div class="col-6 charts">
-                <div id="container4"></div>
+
+            <div class="col-12 col-md-6 charts">
+                <div class="chart-wrapper" style="z-index: -9999;">
+                    <div id="container4" style="z-index: -999"></div>
+                </div>
+                <div class="export-wrapper">
+                    <div class="export-div">Export
+                        <div class="drop-menu">
+                            <div class="drop-first">CVS</div>
+                            <div>Ecel</div>
+                            <div>PDF</div>
+                            <div>Print</div>
+                            <div class="drop-last">Copy</div>
+                        </div>
+                        <i class="fa">&#xf107;</i>
+                    </div>
+                    <i class="fa">&#xf0b2;</i>
+                </div>
                 <p class="transfered">Total data transfered: 17,3GB</p>
             </div>
-            <div class="col-6 charts">
-                <div id="container5"></div>
+
+            <div class="col-12 col-md-6 charts">
+                <div class="chart-wrapper" style="z-index: -9999;">
+                    <div id="container5" style="z-index: -999"></div>
+                </div>
+                <div class="export-wrapper">
+                    <div class="export-div">Export
+                        <div class="drop-menu">
+                            <div class="drop-first">CVS</div>
+                            <div>Ecel</div>
+                            <div>PDF</div>
+                            <div>Print</div>
+                            <div class="drop-last">Copy</div>
+                        </div>
+                        <i class="fa">&#xf107;</i>
+                    </div>
+                    <i class="fa">&#xf0b2;</i>
+                </div>
                 <p class="transfered">Total data transfered: 17,3GB</p>
             </div>
-            <div class="col-6 charts">
-                <div id="container6"></div>
+
+            <div class="col-12 col-md-6 charts">
+                <div class="chart-wrapper" style="z-index: -9999;">
+                    <div id="container6" style="z-index: -999"></div>
+                </div>
+                <div class="export-wrapper">
+                    <div class="export-div">Export
+                        <div class="drop-menu">
+                            <div class="drop-first">CVS</div>
+                            <div>Ecel</div>
+                            <div>PDF</div>
+                            <div>Print</div>
+                            <div class="drop-last">Copy</div>
+                        </div>
+                        <i class="fa">&#xf107;</i>
+                    </div>
+                    <i class="fa">&#xf0b2;</i>
+                </div>
                 <p class="transfered">Total data transfered: 17,3GB</p>
             </div>
-            <div class="col-6 charts">
-                <div id="container7"></div>
+
+            <div class="col-12 col-md-6 charts">
+                <div class="chart-wrapper" style="z-index: -9999;">
+                    <div id="container7" style="z-index: -999"></div>
+                </div>
+                <div class="export-wrapper">
+                    <div class="export-div">Export
+                        <div class="drop-menu">
+                            <div class="drop-first">CVS</div>
+                            <div>Ecel</div>
+                            <div>PDF</div>
+                            <div>Print</div>
+                            <div class="drop-last">Copy</div>
+                        </div>
+                        <i class="fa">&#xf107;</i>
+                    </div>
+                    <i class="fa">&#xf0b2;</i>
+                </div>
                 <p class="transfered">Total data transfered: 17,3GB</p>
             </div>
-            <div class="col-6 charts">
-                <div id="container8"></div>
+
+            <div class="col-12 col-md-6 charts">
+                <div class="chart-wrapper" style="z-index: -9999;">
+                    <div id="container8" style="z-index: -999"></div>
+                </div>
+                <div class="export-wrapper">
+                    <div class="export-div">Export
+                        <div class="drop-menu">
+                            <div class="drop-first">CVS</div>
+                            <div>Ecel</div>
+                            <div>PDF</div>
+                            <div>Print</div>
+                            <div class="drop-last">Copy</div>
+                        </div>
+                        <i class="fa">&#xf107;</i>
+                    </div>
+                    <i class="fa">&#xf0b2;</i>
+                </div>
                 <p class="transfered">Total data transfered: 17,3GB</p>
             </div>
 
