calendar responsive need functionality

--- a/index.html
+++ b/index.html
@@ -67,6 +67,46 @@
                     </div>
                     <div class="date">
                         <17.06.2018 - 22.06.2018>
+                            <div class="date-wrapper">
+                                <div class="pick-date1">
+                                    <p class="month-wrapper1">
+                                        <i class="fa">&#xf104;</i>
+                                        <span class="month1">January</span> 2018
+                                    </p>
+                                    <div class="days-in-week1">
+                                        <div>Mon</div>
+                                        <div>Tue</div>
+                                        <div>Wen</div>
+                                        <div>Thu</div>
+                                        <div>Fri</div>
+                                        <div>Sat</div>
+                                        <div>Sun</div>
+                                    </div>
+                                    <div class="date-in-calendar1">
+                                       
+                                    </div>
+                                </div>
+                                <div class="pick-date2">
+                                    <p class="month-wrapper2">
+                                        <span class="month2">February</span> 2018
+                                        <i class="fa">&#xf105;</i>
+                                    </p>
+                                    <div class="days-in-week2">
+                                        <div>Mon</div>
+                                        <div>Tue</div>
+                                        <div>Wen</div>
+                                        <div>Thu</div>
+                                        <div>Fri</div>
+                                        <div>Sat</div>
+                                        <div>Sun</div>
+                                    </div>
+                                    <div class="date-in-calendar2">
+                                        
+                                    </div>
+                                </div>
+
+                                <div class="apply-date">Apply</div>
+                            </div>
                     </div>
                 </div>
                 <div class="reset">Reset filters</div>
