--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                             <div class="date-wrapper">
                                 <div class="pick-date1">
                                     <p class="month-wrapper1">
-                                        <i class="fa">&#xf104;</i>
+                                        <i class="fa left-calendar">&#xf104;</i>
                                         <span class="month1">January</span> 2018
                                     </p>
                                     <div class="days-in-week1">
@@ -89,7 +89,7 @@
                                 <div class="pick-date2">
                                     <p class="month-wrapper2">
                                         <span class="month2">February</span> 2018
-                                        <i class="fa">&#xf105;</i>
+                                        <i class="fa right-calendar">&#xf105;</i>
                                     </p>
                                     <div class="days-in-week2">
                                         <div>Mon</div>
