--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU"
         crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" href="./main.css">
+    <link rel="stylesheet" type="text/css" href="./graphs.css">
+    <link rel="stylesheet" type="text/css" href="./tables.css">
 
     <script src="https://code.highcharts.com/highcharts.js"></script>
     <script src="https://code.highcharts.com/modules/exporting.js"></script>
@@ -49,11 +50,11 @@
                     <p class="typed currently">Currently viewing data:</p>
                     <p class="info">
                         <span class="grey">Mac adress: </span>
-                        <span class="typed"></span>
+                        <span class="typed mac-address"></span>
                     </p>
                     <p class="info">
                         <span class="grey">Contract ID: </span>
-                        <span class="typed"></span>
+                        <span class="typed contract-id"></span>
                     </p>
                     <p class="info">
                         <span class="grey">City:</span>
@@ -83,7 +84,7 @@
                                         <div>Sun</div>
                                     </div>
                                     <div class="date-in-calendar1">
-                                       
+
                                     </div>
                                 </div>
                                 <div class="pick-date2">
@@ -101,7 +102,7 @@
                                         <div>Sun</div>
                                     </div>
                                     <div class="date-in-calendar2">
-                                        
+
                                     </div>
                                 </div>
 
