--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
             </div>
 
             <div class="col-12 col-md-6 charts">
-                <div class="chart-wrapper" style="z-index: -9999;">
+                <div style="z-index: -9999;">
                     <div id="container1" style="z-index: -999"></div>
                 </div>
                 <div class="export-wrapper">
@@ -135,7 +135,7 @@
             </div>
 
             <div class="col-12 col-md-6 charts">
-                <div class="chart-wrapper" style="z-index: -9999;">
+                <div style="z-index: -9999;">
                     <div id="container2" style="z-index: -999"></div>
                 </div>
                 <div class="export-wrapper">
@@ -155,7 +155,7 @@
             </div>
 
             <div class="col-12 col-md-6 charts">
-                <div class="chart-wrapper" style="z-index: -9999;">
+                <div style="z-index: -9999;">
                     <div id="container3" style="z-index: -999"></div>
                 </div>
                 <div class="export-wrapper">
@@ -175,7 +175,7 @@
             </div>
 
             <div class="col-12 col-md-6 charts">
-                <div class="chart-wrapper" style="z-index: -9999;">
+                <div style="z-index: -9999;">
                     <div id="container4" style="z-index: -999"></div>
                 </div>
                 <div class="export-wrapper">
@@ -195,7 +195,7 @@
             </div>
 
             <div class="col-12 col-md-6 charts">
-                <div class="chart-wrapper" style="z-index: -9999;">
+                <div style="z-index: -9999;">
                     <div id="container5" style="z-index: -999"></div>
                 </div>
                 <div class="export-wrapper">
@@ -215,7 +215,7 @@
             </div>
 
             <div class="col-12 col-md-6 charts">
-                <div class="chart-wrapper" style="z-index: -9999;">
+                <div style="z-index: -9999;">
                     <div id="container6" style="z-index: -999"></div>
                 </div>
                 <div class="export-wrapper">
@@ -235,7 +235,7 @@
             </div>
 
             <div class="col-12 col-md-6 charts">
-                <div class="chart-wrapper" style="z-index: -9999;">
+                <div style="z-index: -9999;">
                     <div id="container7" style="z-index: -999"></div>
                 </div>
                 <div class="export-wrapper">
@@ -255,7 +255,7 @@
             </div>
 
             <div class="col-12 col-md-6 charts">
-                <div class="chart-wrapper" style="z-index: -9999;">
+                <div style="z-index: -9999;">
                     <div id="container8" style="z-index: -999"></div>
                 </div>
                 <div class="export-wrapper">
@@ -274,9 +274,181 @@
                 <p class="transfered">Total data transfered: 17,3GB</p>
             </div>
 
+
+            <!-- TABLES ------------------------------------------------------------------------------------------------------------>
+            <div class="col-12 col-md-6 col-xl-3 table-column-1 tables">
+
+                <div class="card-color">
+                    <p class="bigger-then-others">Overall Status</p>
+                    <div class="colored-div orange">Medium</div>
+                </div>
+
+                <div class="card-color">
+                    <p>RSS Status</p>
+                    <div class="colored-div red">Bad</div>
+                </div>
+
+                <div class="card-color">
+                    <p>Clinet RSS Status</p>
+                    <div class="colored-div orange">Medium</div>
+                </div>
+
+                <div class="card-color">
+                    <p>Sticky Client Status</p>
+                    <div class="colored-div green">Good</div>
+                </div>
+                <div class="card-color-wrapper">
+                    <div class="card-color">
+                        <p>Interference Status - overall</p>
+                        <div class="colored-div orange">Medium</div>
+                    </div>
+                    <div class="card-color">
+                        <p>Interference Status Co - Channel</p>
+                        <div class="colored-div green">Good</div>
+                    </div>
+                    <div class="card-color">
+                        <p>Interference Status - Ajdacent</p>
+                        <div class="colored-div red">Bad</div>
+                    </div>
+                </div>
+                <div class="card-color-2">
+                    <p>HGw Interference</p>
+                    <div class="card-color-float">
+                        <p>UniFi</p>
+                        <div class=" green">Good</div>
+                    </div>
+                    <div class="card-color-float card-color-float-second">
+                        <p>Home</p>
+                        <div class=" orange">Medium</div>
+                    </div>
+                </div>
+                <div class="card-color-wrapper">
+                    <div class="card-color">
+                        <p>Retranmission Status</p>
+                        <div class="colored-div red">Bad</div>
+                    </div>
+                    <div class="card-color">
+                        <p>HGw Number of retranmissions</p>
+                        <div class="colored-no-div">5515</div>
+                    </div>
+                </div>
+                <div class="card-color-wrapper">
+                    <div class="card-color">
+                        <p style="font-weight: normal">Total Number of Clients</p>
+                        <div class="colored-no-div">120</div>
+                    </div>
+                    <div class="card-color">
+                        <p style="font-weight: normal">Max. number of concurent clients</p>
+                        <div class="colored-no-div">10</div>
+                    </div>
+                </div>
+                <div class="card-color-wrapper">
+                    <p class="bold">HGw Combined Status</p>
+                    <div class="card-color">
+                        <p style="font-weight: normal">HGw number of clients</p>
+                        <div class="colored-no-div retracted">15</div>
+                    </div>
+                    <div class="card-color">
+                        <p style="font-weight: normal">HGw number of sticky clients</p>
+                        <div class="colored-no-div retracted">2</div>
+                    </div>
+                    <div class="card-color">
+                        <p style="font-weight: normal">Data transfered [GB]</p>
+                        <div class="colored-no-div retracted">5.7</div>
+                    </div>
+                </div>
+
+            </div>
+
+            <div class="col-12 col-md-6 col-xl-3 table-column-2 tables">
+                <div class="card-multi-wrapper">
+                    <p>HGw Bitrate [Mbps]</p>
+                    <div class="top">
+                        <div class="main">KPI Name</div>
+                        <div class="others">Min</div>
+                        <div class="others">Avg</div>
+                        <div class="others">Max</div>
+                        <div class="others">Last</div>
+                    </div>
+                    <div class="bottom">
+                        <div class="main">Bitratte</div>
+                        <div class="others">15</div>
+                        <div class="others">15</div>
+                        <div class="others">15</div>
+                        <div class="others">15</div>
+                    </div>
+                </div>
+                <div class="card-color">
+                    <p style="font-weight:normal;">HGw total trafic [GB]</p>
+                    <div class="colored-no-div">5.7</div>
+                </div>
+                <div class="card-multi-wrapper">
+                    <p>HGw RSS</p>
+                    <div class="top">
+                        <div class="main">KPI Name</div>
+                        <div class="others">Min</div>
+                        <div class="others">Avg</div>
+                        <div class="others">Max</div>
+                        <div class="others">Last</div>
+                    </div>
+                    <div class="bottom">
+                        <div class="main">RSS [dBm]</div>
+                        <div class="others">-40</div>
+                        <div class="others">-35</div>
+                        <div class="others">-30</div>
+                        <div class="others">-32</div>
+                    </div>
+                </div>
+                <div class="card-multi-wrapper">
+                    <p>HGw Interference network RSS</p>
+                    <div class="top">
+                        <div class="main">KPI Name</div>
+                        <div class="others">Avg</div>
+                        <div class="others">Max</div>
+                        <div class="others">Last</div>
+                    </div>
+                    <div class="bottom">
+                        <div class="main">RSS [dBm]</div>
+                        <div class="others">-42</div>
+                        <div class="others">-35</div>
+                        <div class="others">-40</div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-12 col-md-6 col-xl-2 table-column-3 tables">
+                <div class="chart-wrapper" style="z-index: -9999;">
+                    <div id="container9" class="a" style="z-index: -999"></div>
+                </div>
+                <div class="chart-wrapper" style="z-index: -9999;">
+                    <div id="container10" class="a" style="z-index: -999"></div>
+                </div>
+                <div class="chart-wrapper" style="z-index: -9999;">
+                    <div id="container11" class="a" style="z-index: -999"></div>
+                </div>
+                <div class="chart-wrapper" style="z-index: -9999;">
+                    <div id="container12" class="a" style="z-index: -999"></div>
+                </div>
+            </div>
+            <div class="col-12 col-md-6 col-xl-2 table-column-4 tables">
+                <div class="chart-wrapper" style="z-index: -9999;">
+                    <div id="container13" class="a" style="z-index: -999"></div>
+                </div>
+                <div class="chart-wrapper" style="z-index: -9999;">
+                    <div id="container14" class="a" style="z-index: -999"></div>
+                </div>
+                <div class="chart-wrapper" style="z-index: -9999;">
+                    <div id="container15" class="a" style="z-index: -999"></div>
+                </div>
+                <div class="chart-wrapper" style="z-index: -9999;">
+                    <div id="container16" class="a" style="z-index: -999"></div>
+                </div>
+            </div>
+
+
+
+
+
         </div>
-
-
     </div>
 
     <script src="./main.js"></script>
