--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                         <div class="day7">7 Days</div>
                     </div>
                     <div class="date">
-                        <17.06.2018 - 22.06.2018>
+                      <span class="chosen-date"><17.06.2018 - 22.06.2018> </span>
                             <div class="date-wrapper">
                                 <div class="pick-date1">
                                     <p class="month-wrapper1">
