--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU"
         crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" href="./graphs.css">
-    <link rel="stylesheet" type="text/css" href="./tables.css">
+    <link rel="stylesheet" type="text/css" href="./css/graphs.css">
+    <link rel="stylesheet" type="text/css" href="./css/tables.css">
 
     <script src="https://code.highcharts.com/highcharts.js"></script>
     <script src="https://code.highcharts.com/modules/exporting.js"></script>
@@ -67,47 +67,49 @@
                         <div class="day7">7 Days</div>
                     </div>
                     <div class="date">
-                      <span class="chosen-date"><17.06.2018 - 22.06.2018> </span>
-                            <div class="date-wrapper">
-                                <div class="pick-date1">
-                                    <p class="month-wrapper1">
-                                        <i class="fa left-calendar">&#xf104;</i>
-                                        <span class="month1">January</span> 2018
-                                    </p>
-                                    <div class="days-in-week1">
-                                        <div>Mon</div>
-                                        <div>Tue</div>
-                                        <div>Wen</div>
-                                        <div>Thu</div>
-                                        <div>Fri</div>
-                                        <div>Sat</div>
-                                        <div>Sun</div>
-                                    </div>
-                                    <div class="date-in-calendar1">
-
-                                    </div>
+                        <span class="chosen-date">
+                            <17.06.2018 - 22.06.2018>
+                        </span>
+                        <div class="date-wrapper">
+                            <div class="pick-date1">
+                                <p class="month-wrapper1">
+                                    <i class="fa left-calendar">&#xf104;</i>
+                                    <span class="month1">January</span> 2018
+                                </p>
+                                <div class="days-in-week1">
+                                    <div>Mon</div>
+                                    <div>Tue</div>
+                                    <div>Wen</div>
+                                    <div>Thu</div>
+                                    <div>Fri</div>
+                                    <div>Sat</div>
+                                    <div>Sun</div>
                                 </div>
-                                <div class="pick-date2">
-                                    <p class="month-wrapper2">
-                                        <span class="month2">February</span> 2018
-                                        <i class="fa right-calendar">&#xf105;</i>
-                                    </p>
-                                    <div class="days-in-week2">
-                                        <div>Mon</div>
-                                        <div>Tue</div>
-                                        <div>Wen</div>
-                                        <div>Thu</div>
-                                        <div>Fri</div>
-                                        <div>Sat</div>
-                                        <div>Sun</div>
-                                    </div>
-                                    <div class="date-in-calendar2">
+                                <div class="date-in-calendar1">
 
-                                    </div>
                                 </div>
-
-                                <div class="apply-date">Apply</div>
                             </div>
+                            <div class="pick-date2">
+                                <p class="month-wrapper2">
+                                    <span class="month2">February</span> 2018
+                                    <i class="fa right-calendar">&#xf105;</i>
+                                </p>
+                                <div class="days-in-week2">
+                                    <div>Mon</div>
+                                    <div>Tue</div>
+                                    <div>Wen</div>
+                                    <div>Thu</div>
+                                    <div>Fri</div>
+                                    <div>Sat</div>
+                                    <div>Sun</div>
+                                </div>
+                                <div class="date-in-calendar2">
+
+                                </div>
+                            </div>
+
+                            <div class="apply-date">Apply</div>
+                        </div>
                     </div>
                 </div>
                 <div class="reset">Reset filters</div>
@@ -116,7 +118,7 @@
 
             <div class="col-12 col-md-6 charts">
                 <div style="z-index: -9999;">
-                    <div id="container1" style="z-index: -999"></div>
+                    <div id="container1" class="container-for-graphs" style="z-index: -999"></div>
                 </div>
                 <div class="export-wrapper">
                     <div class="export-div">Export
@@ -136,7 +138,7 @@
 
             <div class="col-12 col-md-6 charts">
                 <div style="z-index: -9999;">
-                    <div id="container2" style="z-index: -999"></div>
+                    <div id="container2" class="container-for-graphs" style="z-index: -999"></div>
                 </div>
                 <div class="export-wrapper">
                     <div class="export-div">Export
@@ -156,7 +158,7 @@
 
             <div class="col-12 col-md-6 charts">
                 <div style="z-index: -9999;">
-                    <div id="container3" style="z-index: -999"></div>
+                    <div id="container3" class="container-for-graphs" style="z-index: -999"></div>
                 </div>
                 <div class="export-wrapper">
                     <div class="export-div">Export
@@ -176,7 +178,7 @@
 
             <div class="col-12 col-md-6 charts">
                 <div style="z-index: -9999;">
-                    <div id="container4" style="z-index: -999"></div>
+                    <div id="container4" class="container-for-graphs" style="z-index: -999"></div>
                 </div>
                 <div class="export-wrapper">
                     <div class="export-div">Export
@@ -196,7 +198,7 @@
 
             <div class="col-12 col-md-6 charts">
                 <div style="z-index: -9999;">
-                    <div id="container5" style="z-index: -999"></div>
+                    <div id="container5" class="container-for-graphs" style="z-index: -999"></div>
                 </div>
                 <div class="export-wrapper">
                     <div class="export-div">Export
@@ -216,7 +218,7 @@
 
             <div class="col-12 col-md-6 charts">
                 <div style="z-index: -9999;">
-                    <div id="container6" style="z-index: -999"></div>
+                    <div id="container6" class="container-for-graphs" style="z-index: -999"></div>
                 </div>
                 <div class="export-wrapper">
                     <div class="export-div">Export
@@ -236,7 +238,7 @@
 
             <div class="col-12 col-md-6 charts">
                 <div style="z-index: -9999;">
-                    <div id="container7" style="z-index: -999"></div>
+                    <div id="container7" class="container-for-graphs" style="z-index: -999"></div>
                 </div>
                 <div class="export-wrapper">
                     <div class="export-div">Export
@@ -256,7 +258,7 @@
 
             <div class="col-12 col-md-6 charts">
                 <div style="z-index: -9999;">
-                    <div id="container8" style="z-index: -999"></div>
+                    <div id="container8" class="container-for-graphs" style="z-index: -999"></div>
                 </div>
                 <div class="export-wrapper">
                     <div class="export-div">Export
@@ -417,30 +419,30 @@
             </div>
             <div class="col-12 col-md-6 col-xl-2 table-column-3 tables">
                 <div class="chart-wrapper" style="z-index: -9999;">
-                    <div id="container9" class="a" style="z-index: -999"></div>
+                    <div id="container9" style="z-index: -999"></div>
                 </div>
                 <div class="chart-wrapper" style="z-index: -9999;">
-                    <div id="container10" class="a" style="z-index: -999"></div>
+                    <div id="container10" style="z-index: -999"></div>
                 </div>
                 <div class="chart-wrapper" style="z-index: -9999;">
-                    <div id="container11" class="a" style="z-index: -999"></div>
+                    <div id="container11" style="z-index: -999"></div>
                 </div>
                 <div class="chart-wrapper" style="z-index: -9999;">
-                    <div id="container12" class="a" style="z-index: -999"></div>
+                    <div id="container12" style="z-index: -999"></div>
                 </div>
             </div>
             <div class="col-12 col-md-6 col-xl-2 table-column-4 tables">
                 <div class="chart-wrapper" style="z-index: -9999;">
-                    <div id="container13" class="a" style="z-index: -999"></div>
+                    <div id="container13" style="z-index: -999"></div>
                 </div>
                 <div class="chart-wrapper" style="z-index: -9999;">
-                    <div id="container14" class="a" style="z-index: -999"></div>
+                    <div id="container14" style="z-index: -999"></div>
                 </div>
                 <div class="chart-wrapper" style="z-index: -9999;">
-                    <div id="container15" class="a" style="z-index: -999"></div>
+                    <div id="container15" style="z-index: -999"></div>
                 </div>
                 <div class="chart-wrapper" style="z-index: -9999;">
-                    <div id="container16" class="a" style="z-index: -999"></div>
+                    <div id="container16" style="z-index: -999"></div>
                 </div>
             </div>
 
@@ -451,8 +453,8 @@
         </div>
     </div>
 
-    <script src="./main.js"></script>
-    <script src="./charts.js"></script>
+    <script src="./js/main.js"></script>
+    <script src="./js/charts.js"></script>
 </body>
 
 </html>
